@@ -22,11 +22,11 @@ Conflicts: safe-rm (<< 0.8),
  doc-base (<< 0.10.3),
  mono-gac (<< 2.10.8.1-3)
 Breaks: autoconf2.13 (<< 2.13-45),
- libscalar-list-utils-perl (<< 1:1.25),
- libfile-spec-perl (<< 3.3902),
+ libscalar-list-utils-perl (<< 1:1.27),
+ libfile-spec-perl (<< 3.4000),
  libxsloader-perl (<< 0.16),
  libmarc-charset-perl (<< 1.2),
- libsocket-perl (<< 2.001)
+ libsocket-perl (<< 2.009)
 Replaces: perl (<< 5.10.1-12), perl-modules (<< 5.10.1-1), libperl5.8 (<< 5.8.0-20),
  libscalar-list-utils-perl,
  libxsloader-perl,
@@ -108,55 +108,55 @@ Architecture: all
 Depends: perl (>= ${Upstream-Version}-1)
 Conflicts: defoma (<< 0.11.12),
  mono-gac (<< 2.10.8.1-3)
-Breaks: libpod-parser-perl (<< 1.51),
- libansicolor-perl (<< 3.01),
- libfile-temp-perl (<< 0.22),
+Breaks: libpod-parser-perl (<< 1.60),
+ libansicolor-perl (<< 4.02),
+ libfile-temp-perl (<< 0.23),
  libnet-perl (<= 1:1.22),
- libattribute-handlers-perl (<< 0.93),
- libcgi-pm-perl (<< 3.59),
- libi18n-langtags-perl (<< 0.38),
- liblocale-maketext-perl (<< 1.22),
- libmath-bigint-perl (<< 1.998),
- libnet-ping-perl (<< 2.38),
- libtest-harness-perl (<< 3.23),
+ libattribute-handlers-perl (<< 0.94),
+ libcgi-pm-perl (<< 3.63),
+ libi18n-langtags-perl (<< 0.39),
+ liblocale-maketext-perl (<< 1.23),
+ libmath-bigint-perl (<< 1.9991),
+ libnet-ping-perl (<< 2.41),
+ libtest-harness-perl (<< 3.26),
  libtest-simple-perl (<< 0.98),
- liblocale-codes-perl (<< 3.21),
- libmodule-corelist-perl (<< 2.76),
+ liblocale-codes-perl (<< 3.25),
+ libmodule-corelist-perl (<< 2.87),
  libio-zlib-perl (<< 1.10),
- libarchive-tar-perl (<< 1.82),
- libextutils-cbuilder-perl (<< 0.280206),
- libmodule-build-perl (<< 0.390000.01),
- libmodule-load-perl (<< 0.22),
+ libarchive-tar-perl (<< 1.90),
+ libextutils-cbuilder-perl (<< 0.280210),
+ libmodule-build-perl (<< 0.400300),
+ libmodule-load-perl (<< 0.24),
  liblocale-maketext-simple-perl (<< 0.21),
- libparams-check-perl (<< 0.32),
- libmodule-pluggable-perl (<< 4.0),
- libmodule-load-conditional-perl (<< 0.46),
- libcpanplus-perl (<< 0.9121),
- libversion-perl (<< 1:0.9900),
- libpod-simple-perl (<< 3.20),
- libextutils-parsexs-perl (<< 3.160000),
+ libparams-check-perl (<< 0.36),
+ libmodule-pluggable-perl (<< 4.7),
+ libmodule-load-conditional-perl (<< 0.54),
+ libcpanplus-perl (<< 0.9135),
+ libversion-perl (<< 1:0.9902),
+ libpod-simple-perl (<< 3.26),
+ libextutils-parsexs-perl (<< 3.180000),
  libpod-escapes-perl (<< 1.04),
- libparse-cpan-meta-perl (<< 1.4402),
+ libparse-cpan-meta-perl (<< 1.4404),
  libparent-perl (<< 0.225),
- libautodie-perl (<< 2.10),
- libthread-queue-perl (<< 2.12),
- libfile-spec-perl (<< 3.3902),
- libtime-local-perl (<< 1.2000),
+ libautodie-perl (<< 2.13),
+ libthread-queue-perl (<< 3.02),
+ libfile-spec-perl (<< 3.4000),
+ libtime-local-perl (<< 1.2300),
  podlators-perl (<< 2.3.1),
- libunicode-collate-perl (<< 0.89),
- libcpan-meta-perl (<< 2.120630),
+ libunicode-collate-perl (<< 0.97),
+ libcpan-meta-perl (<< 2.120921),
  libmath-complex-perl (<< 1.59),
  libextutils-command-perl (<< 1.17),
- libmodule-metadata-perl (<< 1.000009),
- libjson-pp-perl (<< 2.27200),
- libperl-ostype-perl (<< 1.002),
+ libmodule-metadata-perl (<< 1.000011),
+ libjson-pp-perl (<< 2.27202),
+ libperl-ostype-perl (<< 1.003),
  libversion-requirements-perl(<< 0.101022),
- libcpan-meta-yaml-perl (<< 0.007),
+ libcpan-meta-yaml-perl (<< 0.008),
  libdigest-perl (<< 1.17),
- libextutils-install-perl (<< 1.58),
- libhttp-tiny-perl (<< 0.017),
- libfile-path-perl (<< 2.08.01),
- libcpan-meta-requirements-perl (<< 2.120630)
+ libextutils-install-perl (<< 1.59),
+ libhttp-tiny-perl (<< 0.025),
+ libfile-path-perl (<< 2.09),
+ libcpan-meta-requirements-perl (<< 2.122)
 Replaces: libpod-parser-perl,
  libansicolor-perl,
  libfile-temp-perl,
@@ -270,23 +270,23 @@ Architecture: any
 Depends: perl-base (= ${binary:Version}), perl-modules (>= ${source:Version}), ${shlibs:Depends}
 Conflicts: libjson-pp-perl (<< 2.27200-2)
 Breaks: perl-doc (<< ${Upstream-Version}-1),
- libdigest-md5-perl (<< 2.51),
+ libdigest-md5-perl (<< 2.52),
  libmime-base64-perl (<< 3.13),
  libtime-hires-perl (<< 1.9725),
- libstorable-perl (<< 2.34),
- libdigest-sha-perl (<< 5.71-2),
- libsys-syslog-perl (<< 0.29),
- libcompress-zlib-perl (<< 2.048),
- libcompress-raw-zlib-perl (<< 2.048),
- libcompress-raw-bzip2-perl (<< 2.048),
- libio-compress-zlib-perl (<< 2.048),
- libio-compress-bzip2-perl (<< 2.048),
- libio-compress-base-perl (<< 2.048),
- libio-compress-perl (<< 2.048),
+ libstorable-perl (<< 2.41),
+ libdigest-sha-perl (<< 5.84),
+ libsys-syslog-perl (<< 0.32),
+ libcompress-zlib-perl (<< 2.060),
+ libcompress-raw-zlib-perl (<< 2.060),
+ libcompress-raw-bzip2-perl (<< 2.060),
+ libio-compress-zlib-perl (<< 2.060),
+ libio-compress-bzip2-perl (<< 2.060),
+ libio-compress-base-perl (<< 2.060),
+ libio-compress-perl (<< 2.060),
  libthreads-perl (<< 1.86),
- libthreads-shared-perl (<< 1.40),
+ libthreads-shared-perl (<< 1.43),
  libtime-piece-perl (<< 1.20.01),
- libencode-perl (<< 2.44-1+deb7u1),
+ libencode-perl (<< 2.49),
  mrtg (<< 2.16.3-3.1),
  libhtml-template-compiled-perl (<< 0.95-1),
  libperl-apireference-perl (<< 0.09-1),
