@@ -11,6 +11,7 @@ perl (5.17.11-1) UNRELEASED; urgency=low
   * Provide a more modern description of Perl in the long description
     of the perl package (Closes: #678307)
   * New upstream release
+    - update Breaks versions in debian/control for dual-lived modules
 
  -- Niko Tyni <ntyni@debian.org>  Sat, 23 Mar 2013 18:34:59 +0200
 
